--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -65,7 +65,7 @@
                 {% endfor %}
             </tbody>
         </table>
-
+        <div> Total Balance: {{balance}}</div>
         <div class="d-flex justify-content-center">
             <a class="btn btn-success" href="{{ url_for('add_transaction') }}">Add Transaction</a>
         </div>
